corrected remarks