@@ -11,8 +11,8 @@ import java.util.stream.Collectors;
 
 @Getter
 public class User {
-    private final static Set<String> VALID_JOBS = new HashSet<>(Arrays.asList("Google", "Uber", "Amazon"));
-    private static final Set<String> VALID_ADDRESSES = new HashSet<>(Arrays.asList("London", "New York", "Amsterdam"));
+    private static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
+    private static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
     private String name;
     private int age;
     private String job;
@@ -21,24 +21,20 @@ public class User {
     public User(String userName, int age, String job, String userAddress) {
         if (name.isEmpty()) {
             throw new IllegalArgumentException("Name cannot be empty!");
-        } else {
-            this.name = userName;
         }
         if (age < 0) {
             throw new IllegalArgumentException("Age cannot be less 0");
-        } else {
-            this.age = age;
         }
         if (!(VALID_JOBS.contains(job))) {
             throw new IllegalArgumentException("Invalid job");
-        } else {
-            this.job = job;
         }
         if (!(VALID_ADDRESSES.contains(address))) {
             throw new IllegalArgumentException("Invalid address");
-        } else {
-            this.address = userAddress;
         }
+        this.name = userName;
+        this.age = age;
+        this.job = job;
+        this.address = userAddress;
 
     }
 
